--- a/style.scss
+++ b/style.scss
@@ -372,6 +372,49 @@ header {
    }
 }
 
+footer {
+   font-family: "Inter";
+   background-image: url(./assets/circle.svg);
+   background-repeat: no-repeat;
+   background-size: 100%;
+   background-position-x: center;
+   background-position-y: 15rem;
+   padding: 37.5rem 0 10rem;
+
+   .content-footer {
+      max-width: 1280px;
+      margin-inline: auto;
+      padding: 0 0 0 7.5rem;
+
+      .logo-wrap {
+         img.circle {
+            position: absolute;
+         }
+
+         img#text-logo {
+            max-width: 200px;
+         }
+      }
+
+      address {
+         display: flex;
+         flex-direction: column;
+         row-gap: 5px;
+         margin: 3.5rem 0;
+
+         a {
+            color: #fff;
+            text-decoration: none;
+            font-style: normal;
+         }
+      }
+
+      p#datetime {
+         color: #fff;
+      }
+   }
+}
+
 // @media (max-width: 1999px) {
 //    .content-5 {
 //       padding-top: 35rem;
@@ -456,6 +499,15 @@ header {
                }
             }
          }
+      }
+   }
+
+   footer {
+      background-size: 115%;
+      background-position-y: 20rem;
+
+      .content-footer {
+         padding: 0 3rem;
       }
    }
 
@@ -549,6 +601,11 @@ header {
    .content-4 .content p.text {
       font-size: 1rem;
    }
+
+   footer {
+      background-size: 120%;
+      background-position-y: 28rem;
+   }
 }
 
 @media (max-width: 549px) {
@@ -615,9 +672,23 @@ header {
    .responsive .content h3::after {
       height: 5rem;
    }
+
+   footer {
+      background-size: 180%;
+      background-position-y: 20rem;
+      padding: 30rem 0 5rem;
+
+      .content-footer {
+         padding: 0 1.5rem;
+      }
+   }
 }
 
 @media (max-width: 399px) {
+   header .content {
+      padding: 0 1.5rem;
+   }
+
    .content .logo-wrap img.circle {
       top: -10rem;
    }
