--- a/style.css
+++ b/style.css
@@ -59,22 +59,25 @@ header .content {
   position: relative;
   display: flex;
   justify-content: center;
-  margin-top: 4rem;
+  overflow: hidden;
+  min-height: 365px;
 }
 .content .logo-wrap img.circle {
   position: absolute;
-  top: -42.5rem;
+  top: -23.5rem;
   z-index: -1;
-  max-width: 1000px;
+  max-width: 1300px;
 }
 .content .logo-wrap #text-logo {
-  max-width: 380px;
+  max-width: 195px;
+  position: absolute;
+  top: 2%;
 }
 .content .text-wrap {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding-top: 8rem;
+  margin-top: -4rem;
 }
 .content .text-wrap .innovate-text {
   max-width: 900px;
@@ -315,13 +318,17 @@ header .content {
 }
 
 footer {
-  font-family: "Inter";
-  background-image: url(./assets/circle.svg);
+  font-family: LemonMilkLight;
+  letter-spacing: 0.15rem;
+  background-image: url(./assets/new-circle.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position-x: center;
-  background-position-y: 15rem;
+  background-position-y: 45rem;
   padding: 37.5rem 0 10rem;
+  background-color: rgba(33, 59, 65, 0.5);
+  background-blend-mode: darken;
+  background-position-y: 46rem;
 }
 footer .content-footer {
   max-width: 1280px;
@@ -417,8 +424,7 @@ footer .content-footer p#datetime {
     max-height: 70px;
   }
   footer {
-    background-size: 115%;
-    background-position-y: 20rem;
+    background-position-y: 55rem;
   }
   footer .content-footer {
     padding: 0 3rem;
@@ -426,10 +432,11 @@ footer .content-footer p#datetime {
 }
 @media (max-width: 768px) {
   .content .logo-wrap img.circle {
-    top: -27rem;
+    top: -24rem;
   }
   .content .text-wrap {
     align-items: center;
+    margin-top: 0;
   }
   .content .text-wrap .innovate-text {
     display: none;
@@ -460,20 +467,21 @@ footer .content-footer p#datetime {
   .content-4 .content p.text {
     font-size: 1rem;
   }
-  footer {
-    background-size: 120%;
-    background-position-y: 28rem;
-  }
 }
 @media (max-width: 549px) {
   .content {
     padding: 0 1.5rem;
   }
+  .content .logo-wrap {
+    min-height: 245px;
+  }
   .content .logo-wrap img.circle {
     top: -17rem;
+    max-width: 900px;
+    opacity: 0.76;
   }
   .content .logo-wrap #text-logo {
-    max-width: 260px;
+    max-width: 160px;
   }
   .content .text-wrap h1.big {
     font-size: 3rem;
@@ -513,19 +521,15 @@ footer .content-footer p#datetime {
     height: 5rem;
   }
   footer {
-    background-size: 180%;
-    background-position-y: 20rem;
-    padding: 30rem 0 5rem;
+    background-position-y: 58rem;
+    background-size: 150%;
   }
   footer .content-footer {
     padding: 0 1.5rem;
   }
 }
 @media (max-width: 399px) {
-  header .content {
+  header .text-wrap {
     padding: 0 1.5rem;
-  }
-  .content .logo-wrap img.circle {
-    top: -10rem;
   }
 }/*# sourceMappingURL=style.css.map */
