--- a/public/style.css
+++ b/public/style.css
@@ -6,23 +6,23 @@
 
 @font-face {
   font-family: LemonMilkLight;
-  src: url("../fonts/LEMONMILK-Light.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Light.otf") format("opentype");
 }
 @font-face {
   font-family: LemonMilk;
-  src: url("../fonts/LEMONMILK-Regular.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Regular.otf") format("opentype");
 }
 @font-face {
   font-family: LemonMilkMedium;
-  src: url("../fonts/LEMONMILK-Medium.otf") format("opentype");
+  src: url("./fonts/LEMONMILK-Medium.otf") format("opentype");
 }
 @font-face {
   font-family: Cocogoose;
-  src: url("../fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
+  src: url("./fonts/Cocogoose-Pro-Regular-trial.ttf") format("truetype");
 }
 @font-face {
   font-family: CocogooseLight;
-  src: url("../fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
+  src: url("./fonts/Cocogoose-Pro-Ultralight-trial.ttf") format("truetype");
 }
 .purple-btn {
   color: #fff;
@@ -43,7 +43,7 @@ body {
 }
 
 header {
-  background-image: url(../assets/new-circle.png);
+  background-image: url(./assets/new-circle.png);
   background-size: 1480px;
   background-position-y: -26rem;
   background-position-x: center;
@@ -118,7 +118,7 @@ header .content {
   row-gap: 40px;
   padding: 25rem 0 8.5rem;
   position: relative;
-  background-image: url(../assets/line-1.svg);
+  background-image: url(./assets/line-1.svg);
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: bottom;
@@ -227,7 +227,7 @@ header .content {
 
 .content-4 {
   padding-top: 15rem;
-  background-image: url(../assets/line-2.svg);
+  background-image: url(./assets/line-2.svg);
   background-repeat: no-repeat;
   background-size: 115%;
   background-position: top;
@@ -267,7 +267,7 @@ header .content {
 
 .content-5 {
   padding-top: 30%;
-  background-image: url(../assets/line-3.svg);
+  background-image: url(./assets/line-3.svg);
   background-repeat: no-repeat;
   background-size: 115%;
   background-position-x: center;
@@ -304,7 +304,8 @@ header .content {
 .content-5 .content .form-wrap form #phone-error,
 .content-5 .content .form-wrap form #web-error,
 .content-5 .content .form-wrap form #country-error,
-.content-5 .content .form-wrap form #project-error {
+.content-5 .content .form-wrap form #project-error,
+.content-5 .content .form-wrap form #form-submit-error {
   color: #ff6262;
   font-size: 12px;
   margin: 0 0 0 1rem;
@@ -340,15 +341,14 @@ header .content {
 footer {
   font-family: LemonMilkLight;
   letter-spacing: 0.15rem;
-  background-image: url(../assets/new-circle.png);
+  background-image: url(./assets/new-circle.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position-x: center;
-  background-position-y: 45rem;
-  padding: 37.5rem 0 10rem;
+  background-position-y: 18rem;
+  padding: 10.5rem 0 10rem;
   background-color: rgba(33, 59, 65, 0.5);
   background-blend-mode: darken;
-  background-position-y: 46rem;
 }
 footer .content-footer {
   max-width: 1280px;
